backend/test/resources/invalid/randomDag-g.16.4.graphml-5.lgf
@nodes
label	type	ref
0	0	47
1	0	46
2	0	45
3	12	281
4	0	44
5	20	1
6	20	1
7	0	43
8	0	42
9	10	0
10	20	1
11	20	2
12	20	2
13	20	2
14	10	0
15	20	5
16	12	352
17	11	1
18	11	0
19	0	41
20	0	40
21	0	39
22	0	38
23	0	37
24	0	36
25	0	35
26	0	34
27	0	33
28	0	32
29	0	31
30	0	30
31	0	29
32	0	28
33	0	27
34	0	26
35	0	25
36	0	24
37	0	23
38	0	22
39	0	21
40	0	20
41	0	19
42	0	18
43	0	17
44	0	16
45	0	15
46	0	14
47	0	13
48	0	12
49	0	11
50	0	10
51	0	9
52	0	8
53	0	7
54	0	6
55	0	5
56	0	4
57	0	3
58	0	2
59	0	1
60	0	0
@arcs
		label	condition
0	15	0	""
1	0	1	""
2	3	2	""
3	53	3	63
3	46	4	92
4	5	5	""
5	25	6	""
6	44	7	""
7	20	8	""
8	33	9	""
9	8	10	""
9	38	11	""
9	10	12	""
18	11	13	SONST
18	15	14	13
17	21	15	36
17	15	16	SONST
17	57	17	95
16	1	18	78
16	23	19	57
16	58	20	8
13	55	21	""
14	36	22	""
14	30	23	""
14	11	24	""
14	40	25	""
14	60	26	""
12	16	27	""
11	17	28	""
10	37	29	""
19	6	30	""
20	47	31	""
21	28	32	""
22	15	33	""
23	15	34	""
24	10	35	""
25	9	36	""
26	54	37	""
27	49	38	""
28	13	39	""
29	42	40	""
30	7	41	""
31	29	42	""
32	11	43	""
33	24	44	""
34	48	45	""
35	59	46	""
36	2	47	""
37	45	48	""
38	32	49	""
39	35	50	""
40	39	51	""
41	4	52	""
42	51	53	""
43	6	54	""
44	50	55	""
45	34	56	""
46	41	57	""
47	19	58	""
48	52	59	""
49	22	60	""
50	5	61	""
51	12	62	""
52	18	63	""
53	43	64	""
54	27	65	""
55	26	66	""
56	13	67	""
57	31	68	""
58	56	69	""
59	12	70	""
60	13	71	""
@attributes
target 15
recommended ""
